--- a/_posts/2020-01-27-MCNN.md
+++ b/_posts/2020-01-27-MCNN.md
@@ -4,8 +4,8 @@ tags: CrowdCounting
 article_header:
   type: cover
   image:
-    src: /screenshots/MCNN.png
-    
+    src: /cover/MCNN.png
+
 ---
 
 > ## 前言
