--- a/_posts/2020-01-27-MCNN.md
+++ b/_posts/2020-01-27-MCNN.md
@@ -93,8 +93,7 @@ the pixels associated with different samples $x_i$ correspond to areas of differ
 
 > 这里我们暂停一下，结合代码理解一下这种密度图的生成方式。
 
-
- ``` Python
+```python
 def gaussian_filter_density(img,points):
 """
     This code use k-nearst, will take one minute or more to generate a density-map with one thousand people.
@@ -132,4 +131,4 @@ def gaussian_filter_density(img,points):
         density += scipy.ndimage.filters.gaussian_filter(pt2d, sigma, mode='constant')
     print ('done.')
     return density
-    ```
+```
