--- a/_posts/2020-01-27-MCNN.md
+++ b/_posts/2020-01-27-MCNN.md
@@ -183,3 +183,15 @@ MCNN模型的一个优点是，学习到了不同头部大小的建模信息。
 其次，与微调整个网络相比，微调最后几层大大降低了计算复杂度。
 
 ## Experiments
+具体实验结果省略，看一下发布的数据集Shanghaitech dataset吧。
+### Shanghaitech dataset
+
+我们引入了一个名为Shanghaitech的新的大规模人群计数数据集，其中包含1198幅带注释的图像，总共330,165人的头部中心注释。
+据我们所知，就注释人的数量而言，该数据集是最大的数据集。
+该数据集由两部分组成：A部分中有482张图像，是从Internet上随机抓取的，B部分中有716张图像，是从上海市的繁忙街道上拍摄的。
+两个子集的人群密度存在显著变化，这使得人群的准确估计比大多数现有数据集更具挑战性。 
+A部分和B部分都分为训练和测试：A部分的300张图像用于训练，其余182张图像用于测试； B部分的400张图像用于训练，316张用于测试。
+表1给出了Shanghaitech数据集的统计数据及其与其他数据集的比较。
+
+![数据集规模比较](../postimages/MCNN/datasetcomparison.png)
+
