--- a/_posts/2020-02-03-HydraCNN.md
+++ b/_posts/2020-02-03-HydraCNN.md
@@ -21,21 +21,17 @@ article_header:
 ------
 
 ## Abstract
-  在本文中，我们解决了对图像中的对象实例进行计数的问题。
-我们的模型能够精确地估计交通拥堵中的车辆数量，或在非常拥挤的场景中计算人数。
-我们的第一个贡献是提出了一种新颖的卷积神经网络解决方案，名为Counting CNN（CCNN）。
-本质上，CCNN被公式化为回归模型，在该模型中，网络学习如何将图像块的外观映射到其相应的对象密度图。
-我们的第二个贡献在于一个规模感知计数模型Hydra CNN，它能够在无法提供场景几何信息的各种非常拥挤的场景中估算物体密度。 
-Hydra CNN学习了一种多尺度非线性回归模型，该模型使用在多个尺度上提取的图像补丁金字塔来执行纳尔密度预测。
-我们报告了一项广泛的实验评估，使用了多达三个不同的对象计数基准，我们在其中展示了我们的解决方案如何实现最先进的性能。
+  在本文中，我们解决了对图像中的对象实例进行计数的问题。我们的模型能够精确地估计交通拥堵中的车辆数量，或在非常拥挤的场景中估计人数。我们的第一个贡献是提出了一种新颖的卷积神经网络解决方案，名为Counting CNN（CCNN）。本质上，CCNN是回归模型，在该模型中，网络学习如何将图像patch映射到其相应的密度图。我们的第二个贡献在于一个尺度计数模型Hydra CNN，它能够在无法提供场景几何信息的非常拥挤的场景中估算密度。Hydra CNN学习了一种多尺度非线性回归模型，该模型使用在多个尺度上提取的图像金字塔来执行密度预测。
 
 
 ## Introduction
-本文提出了一种端到端的CNN模型来处理人群图像中的计数任务。我们的方法不是将图像分成小块，而是将整个图像作为输入，并直接输出最终的图像计数。
-结果，我们的方法利用了重叠区域上的共享计算，并结合了多个处理阶段以降低复杂性。要学习端到端模型，一种直接的方法是直接回归输入图像的全局计数。但是整体图像比图像patch包含更多的背景噪声和更少的目标区域（这里的更少的目标区域是从目标区域面积占整体面积的比率而言），很难收敛。
-为了解决这个问题，我们提出同时学习局部计数，这可以看作是学习patch级别计数模型，而局部计数可以帮助加速模型训练。
+略 
 
-## END-TO-END CROWD COUNTING
+## Related Work
+
+略
+
+## Method
 
 网络由三个部分组成，一个GoogleLeNet提取特征，LSTM 映射特征到局部计数，全连接层映射到最终计数。假设第一个部分的输出是一个维度为k × w × h的特征，每个position代表原图这个小块内的局部特征。网络通过加权的loss同时优化局部计数和全局计数。
 ### Local Count 
