--- a/_posts/2020-02-03-HydraCNN.md
+++ b/_posts/2020-02-03-HydraCNN.md
@@ -32,14 +32,38 @@ article_header:
 略
 
 ## Method
+先看一下论文的整体结构：
 
-网络由三个部分组成，一个GoogleLeNet提取特征，LSTM 映射特征到局部计数，全连接层映射到最终计数。假设第一个部分的输出是一个维度为k × w × h的特征，每个position代表原图这个小块内的局部特征。网络通过加权的loss同时优化局部计数和全局计数。
-### Local Count 
-这里着重讲一下局部计数的定义。
+![整体结构](/postimages/HydraCNN/arch.png)
 
-![局部计数的定义](/postimages/LocalGlobal/receptive_field.png)
 
-如图，GoogleLeNet的感受野是139，也就是说在输出的$1024 \times 20 \times 15$的特征中，每个位置对应了原图$139 \times 139$的区域，但作者让其对应至这个区域中心$100 \times 100$的计数。
+### 建模
+给定一个输入patch，网络输出其对应密度图，最终多个patch整合为整体结果。
+### The Counting CNN 
+
+这个CCNN的结构没有什么值得解读的，就是一个全卷积结构，作者花了很大篇幅来说明自己与前人工作的不同。看结构：
+
+![CCNN结构](/postimages/HydraCNN/CCNN.png)
+
+输入的patch都被rescale到$72 \times 72$,由于最终密度图尺度缩小至1/4，所以需要对输出的密度图放大至$72 \times 72$，再对其中的值进行归一化，归一化方式为：
+
+$$\hat{D}_{\text {pred}}^{P}=\frac{\sum_{\forall p} D_{\text {pred}}^{P}(p)}{\sum_{\forall p} \hat{D}_{\text {pred}}^{P}(p)} \hat{D}_{\text {pred}}^{P}$$
+其中$\hat{D}_{\text {pred}}^{P}$是放大之后的密度图。
+
+之后将所有patch的对应结果拼合回去，其中一些像素不止被提取了一次，所以还要再做一次归一化，就是把这个像素位置的值除以它被提取进入patch的次数。
+
+>先吐槽一下，本文这一节行文很不正式哈。
+然后看一下第二次归一化的细节，恰好前一阵用pytorch实现一个模块的时候用到了。一般取patch的操作使用Unfold操作实现，对每一个patch计算出结果之后，再用Fold函数拼回去，但是需要注意[fold(unfold(x)) != x](https://github.com/pytorch/pytorch/issues/7519)，参见这个issue，这里面用了一种很巧妙的方式做归一化，就是用一个权值都为1的矩阵做和x一样的unfold-fold的过程，根据结果算出每个位置对应的归一化系数：
+
+``` python
+x = torch.ones(H*W).reshape(1, 1 ,H, W).float()
+y = torch.nn.functional.unfold(x, 3, padding=1)
+z = torch.nn.functional.fold(y, (H,W), 3, padding=1)
+ratio=z/x
+```
+
+### Hydra CNN
+对于一般的基于回归的计数模型，由于透视效应的干扰，通常需要对输入特征进行 geometric correction。本文通过对输入取金字塔来克服透视干扰。
 
   
 
